# entroq

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CHANGES.md  DOCS_TODO.md  Dockerfile  Gopkg.toml  Makefile  README.md  doc.go  docker-compose.yaml  docker_build.sh  entroq.go  entroq_heartbeat_test.go  entroq_test.go  go.mod  go.sum  jwt.go  kustomization.yaml  setup.py  stats.go  task.go  test.go  worker.go
.regal/: config.yaml
api/: Dockerfile  entroq.pb.go  entroq.proto  entroq_grpc.pb.go  json.go  openapi.yaml  protoc.sh
api/apiconnect/: entroq.connect.go
backend/eqgrpc/: grpc.go  grpc_test.go
backend/eqmem/: claimheap.go  eqmem.go  eqmem_journal_test.go  eqmem_test.go  mem_bench_test.go  modmap.go  queuetasks.go  taskqueue.go
backend/eqpg/: pg.go  pg_bench_test.go  pg_test.go  pgnotify.go  pgworker.go  schema.go  schema.sql
backend/eqtest/: bench.go
charts/entroq/: Chart.yaml  README.md  values.yaml
clients/js/: .gitignore  README.md  debug_server.sh  entroqpb.d.ts  entroqpb.js  package-lock.json  package.json  tsconfig.json  tsup.config.ts
clients/py/: .gitignore  example_worker_pg.py  pyproject.toml
clients/py/entroq/: __init__.py  __main__.py  entroq_pb2_grpc.py  pyproject.toml  requirements.txt
clients/py/entroq_pg/: pyproject.toml  requirements.txt  schema.sql  test_entroq_pg.py
clients/py/entroq_pg/tests/: conftest.py  test_entroq_pg.py
clients/py/examples/mr/: chaos.py  cluster.py  mr.py
clients/py/protoc/: protoc.sh
clients/py/src/entroq/: __init__.py  base.py  json.py  types.py  worker.py
clients/py/src/entroq/pg/: __init__.py  schema.sql
clients/py/src/entroq_pg/: __init__.py  schema.sql
clients/py/tests/: conftest.py  test_entroq_pg.py  test_worker_health.py
cmd/: .gitignore  LICENSE  eqsvc.sh  test.go
cmd/eqc/: main.go
cmd/eqctl/: main.go
cmd/eqjournal/: main.go
cmd/eqk8s/: AGENTS.md  Dockerfile  Makefile  PROJECT  README.md
contrib/: prometheus.yaml
docs/: mesh-policy.md
etcd/: etcd.go
examples/: example_worker.py
grpc/: grpc.go
hooks/: build  post_build  post_push
http/: http.go
mem/: mem.go  mem_test.go  taskheap.go
perf/: README.md  bench.py
pg/: Dockerfile  pg.go  pg_test.go
pgtask/: pgtask.go
proto/: Dockerfile  README.md  authz.pb.go  authz.proto  entroq.pb.go  entroq.proto  entroq_grpc.pb.go  protoc.sh
qsvc/: qsvc.go
qsvcjson/: qsvcjson.go
queues/: queues.go
rest/: rest.go
scripts/: RELEASE.md  build-docker.sh  build-js.sh  publish-js.sh  publish-py.sh  smoke-test.sh  tag-release.sh
subq/: subq.go
worker/: worker.go  worker_test.go
(+349 files in other folders)
