[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "entroq"
version = "0.10.0"
authors = [
  { name="Chris", email="chris@example.com" },
]
description = "Python client for the EntroQ task queue."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "psycopg>=3.1.8",
    "requests"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/shiblon/entroq"
"Bug Tracker" = "https://github.com/shiblon/entroq/issues"

[project.optional-dependencies]
dev = [
    "psycopg[binary]",
    "pytest",
    "testcontainers[postgres]",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.sql"]
