[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "entroq"
version = "0.3.10"
description = "EntroQ Python client library (gRPC)"
requires-python = ">=3.7"
dependencies = [
    "grpcio>=1.32",
    "grpcio-status>=1.32",
    "grpcio-health-checking>=1.32",
    "protobuf>=3.12",
    "click>=7.0",
]

[project.urls]
Homepage = "https://github.com/shiblon/entroq"
